--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -21,8 +21,20 @@
     <br />
     <h2>Grade Calculator:</h2>
     <form>
-        <label>Enter Grade pct here:</label>
-        <input type="text" id="input" />
+        <label>Enter Assignment percentage here:</label>
+        <input type="text" id="assignmentinput" />
+        <br />
+        <label>Enter Group Project percentage here:</label>
+        <input type="text" id="groupinput" />
+        <br />
+        <label>Enter quiz percentage here:</label>
+        <input type="text" id="quizinput" />
+        <br />
+        <label>Enter Exam percentage here:</label>
+        <input type="text" id="examinput" />
+        <br />
+        <label>Enter INTEX percentage here:</label>
+        <input type="text" id="intexinput" />
         <br />
         <button type="button" value="Submit" id="submit">Submit</button>
     </form>
